--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -7,6 +7,8 @@ edit_uri: edit/main/docs/
 
 theme:
   name: material
+  logo: assets/logo.svg
+  favicon: assets/logo.svg
   palette:
     # Light mode
     - scheme: default
@@ -90,14 +92,15 @@ nav:
     - Architecture: concepts/architecture.md
     - RBAC Model: concepts/rbac-model.md
     - Policy Evaluation: concepts/policy-evaluation.md
-  #- Reference:
-    #- reference/index.md
-    #- CRDs:
-      #- ClusterConnection: reference/crds/clusterconnection.md
-      #- MonitorAccessPolicy: reference/crds/monitoraccesspolicy.md
+  - References:
+    - references/index.md
+    - CRDs:
+      - ClusterConnection: references/crds/clusterconnection.md
+      - MonitorAccessPolicy: references/crds/monitoraccesspolicy.md
+      - RegistryConnection: references/crds/registryconnection.md
     #- API: reference/api/overview.md
   - Contributing:
-    #- contributing/index.md
+    - contributing/index.md
     - API Development: contributing/api.md
     - Cluster Controller: contributing/cluster-controller.md
     - Policy Controller: contributing/policy-controller.md
