--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,7 +75,7 @@ jobs:
             type=raw,value=latest
       - uses: docker/build-push-action@v6
         with:
-          context: ./api
+          context: .
           file: Dockerfile.api
           push: true
           tags: ${{ steps.meta.outputs.tags }}
