--- a/Dockerfile.policy-controller
+++ b/Dockerfile.policy-controller
@@ -39,7 +39,7 @@ WORKDIR /app
 COPY --from=builder --chown=1001:0 /install /usr/local
 
 # Copy application code with proper permissions
-COPY --chown=1001:0 ./policy-controller/policy_controller.py .
+COPY --chown=1001:0 ./policy-controller/*.py .
 
 # Create directories that might need write access
 RUN mkdir -p /app/logs /app/tmp && \
