--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["setuptools>=65.0", "wheel"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "clusterpulse"
 version = "0.2.1"
@@ -9,49 +5,110 @@ description = "ClusterPulse API"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "fastapi==0.109.0",
-    "uvicorn[standard]==0.27.0",
-    "pydantic==2.5.3",
-    "pydantic[email]==2.5.3",
-    "pydantic-settings==2.1.0",
-    "python-multipart==0.0.6",
-    "python-jose[cryptography]==3.3.0",
-    "passlib[bcrypt]==1.7.4",
-    "httpx==0.26.0",
-    "kubernetes==29.0.0",
-    "redis==5.0.1",
-    "hiredis==2.3.2",
-    "aiofiles==23.2.1",
-    "python-json-logger==2.0.7",
-    "prometheus-client==0.19.0",
-    "opentelemetry-api==1.22.0",
-    "opentelemetry-sdk==1.22.0",
-    "opentelemetry-instrumentation-fastapi==0.43b0",
-    "python-dateutil==2.8.2",
-    "pytz==2023.3",
-    "pyyaml==6.0.1",
-    "jinja2==3.1.3",
-    "websockets==12.0",
+    "fastapi>=0.109",
+    "uvicorn[standard]>=0.27",
+    "pydantic[email]>=2.5",
+    "pydantic-settings>=2.1",
+    "python-multipart>=0.0.6",
+    "python-jose[cryptography]>=3.3",
+    "passlib[bcrypt]>=1.7.4",
+    "httpx>=0.26",
+    "kubernetes>=29",
+    "redis>=5",
+    "hiredis>=2.3",
+    "aiofiles>=23.2",
+    "python-json-logger>=2",
+    "prometheus-client>=0.19",
+    "opentelemetry-api>=1.22",
+    "opentelemetry-sdk>=1.22",
+    "opentelemetry-instrumentation-fastapi>=0.43b0",
+    "python-dateutil>=2.8",
+    "pytz>=2023.3",
+    "pyyaml>=6",
+    "jinja2>=3.1",
+    "websockets>=12",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.4.0",
-    "pytest-cov>=4.1.0",
-    "pytest-asyncio>=0.21.0",
-    "black>=23.0.0",
-    "ruff>=0.1.0",
-    "mypy>=1.5.0",
+    "black>=23",
+    "ruff>=0.1",
+    "mypy>=1.5",
+]
+test = [
+    "pytest>=7.4",
+    "pytest-asyncio>=0.21",
+    "pytest-cov>=4.1",
+    "pytest-mock>=3.11",
+    "pytest-xdist>=3.3",
+    "pytest-timeout>=2.1",
+    "pytest-randomly>=3.13",
+    "fakeredis>=2.20",
+    "factory-boy>=3.3",
+    "coverage[toml]>=7.3",
 ]
 
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["clusterpulse*"]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["clusterpulse"]
+
+[tool.uv]
+dev-dependencies = [
+    "black>=23",
+    "ruff>=0.1",
+    "mypy>=1.5",
+    "pytest>=7.4",
+    "pytest-asyncio>=0.21",
+    "pytest-cov>=4.1",
+    "pytest-mock>=3.11",
+    "pytest-xdist>=3.3",
+    "pytest-timeout>=2.1",
+    "pytest-randomly>=3.13",
+    "fakeredis>=2.20",
+    "factory-boy>=3.3",
+    "coverage[toml]>=7.3",
+]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 asyncio_mode = "auto"
 pythonpath = ["."]
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
+markers = [
+    "unit: Unit tests (fast, isolated)",
+    "integration: Integration tests (require mocked dependencies)",
+    "e2e: End-to-end tests (slowest, full system)",
+    "slow: Mark test as slow running",
+    "rbac: RBAC-specific tests",
+    "redis: Tests that require Redis",
+]
+addopts = "-v --strict-markers --tb=short"
+
+[tool.coverage.run]
+source = ["clusterpulse"]
+omit = ["*/tests/*", "*/conftest.py", "*/__pycache__/*"]
+
+[tool.coverage.report]
+precision = 2
+show_missing = true
+skip_covered = false
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "@abstractmethod",
+]
+
+[tool.coverage.html]
+directory = "htmlcov"
 
 [tool.black]
 line-length = 88
@@ -60,3 +117,9 @@ target-version = ['py311']
 [tool.ruff]
 line-length = 88
 target-version = "py311"
+
+[tool.mypy]
+python_version = "3.11"
+warn_return_any = true
+warn_unused_configs = true
+ignore_missing_imports = true
