--- a/Dockerfile.collector
+++ b/Dockerfile.collector
@@ -10,7 +10,7 @@ ARG BUILD_DATE=unknown
 
 WORKDIR /app
 
-RUN apk add --no-cache git make
+RUN apk add --no-cache git
 
 # Copy go mod files
 COPY go.mod go.sum ./
@@ -28,7 +28,7 @@ RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -a \
     -X github.com/clusterpulse/cluster-controller/internal/version.GitCommit=${GIT_COMMIT} \
     -X github.com/clusterpulse/cluster-controller/internal/version.GitTreeState=${GIT_TREE_STATE} \
     -X github.com/clusterpulse/cluster-controller/internal/version.BuildDate=${BUILD_DATE}" \
-    -o cluster-controller cmd/manager/main.go
+    -o clusterpulse-collector cmd/collector/main.go
 
 # Final stage
 FROM alpine:3.19
@@ -37,14 +37,8 @@ RUN apk --no-cache add ca-certificates
 
 WORKDIR /
 
-# Copy the binary from builder
-COPY --from=builder /app/cluster-controller .
+COPY --from=builder /app/clusterpulse-collector .
 
 USER 65532
 
-EXPOSE 8081
-
-HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
-    CMD wget -qO- http://localhost:8081/healthz || exit 1
-
-ENTRYPOINT ["/cluster-controller"]
+ENTRYPOINT ["/clusterpulse-collector"]
