--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -20,6 +20,7 @@ COPY cmd/ ./cmd/
 COPY internal/ ./internal/
 COPY api/ ./api/
 COPY pkg/ ./pkg/
+COPY docs/swagger/ ./docs/swagger/
 
 RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -a \
     -ldflags="-s -w \
