Initial collector/ingress feature w/ VictoriaMetrics timeseries integration (#32)
* initial agent collector code

* fixed victoriametrics not reconciling

* removed cluster reconcile fields

* updated VM configuration to send correct metrics. There were missing ones before

* added collectorVersion to CRD

* updated routes to use swagger annotations

* updated to use go 1.25 new features

--- a/Dockerfile.cluster-controller
+++ b/Dockerfile.cluster-controller
@@ -20,6 +20,7 @@ COPY cmd/ ./cmd/
 COPY internal/ ./internal/
 COPY api/ ./api/
 COPY pkg/ ./pkg/
+COPY proto/ ./proto/
 
 RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -a \
     -ldflags="-s -w \
